implement HW6